added * to welcome page.

--- a/public/index.html
+++ b/public/index.html
@@ -10,18 +10,17 @@
     body {background-color: #f0f0f0}
     p.p11 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.0px 'Lucida Grande'; color: #333333; background-color: #f0f0f0}
     li.li1 {margin: 0.0px 0.0px 16.0px 0.0px; font: 16.0px 'Lucida Grande'; color: #333333; background-color: #f0f0f0}
-    li.li2 {margin: 0.0px 0.0px 5.0px 0.0px; font: 13.0px 'Lucida Grande'; color: #0033cc; background-color: #f0f0f0}
+    li.li2 {margin: 0.0px 0.0px 5.0px 0.0px; font: 13.0px 'Lucida Grande'; color: #0000ee; background-color: #f0f0f0}
     li.li8 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.0px 'Lucida Grande'; color: #333333; background-color: #ffffff}
     li.li9 {margin: 0.0px 0.0px 0.0px 0.0px; font: 18.0px 'Lucida Grande'; color: #333333; background-color: #ffffff}
     li.li10 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.0px 'Lucida Grande'; color: #555555; background-color: #ffffff}
     span.s1 {text-decoration: underline}
-    span.s2 {font: 14.0px 'Lucida Grande'; text-decoration: underline ; background-color: #ffffff}
-    span.s3 {font: 18.0px 'Lucida Grande'}
-    span.s4 {font: 18.0px Courier}
-    span.s5 {color: #555555}
-    span.s6 {font: 13.0px 'Lucida Grande'; color: #555555}
-    span.s7 {font: 18.0px 'Lucida Grande'; color: #333333}
-    span.s8 {font: 13.0px Courier}
+    span.s2 {font: 18.0px 'Lucida Grande'}
+    span.s3 {font: 18.0px Courier}
+    span.s4 {color: #555555}
+    span.s5 {font: 13.0px 'Lucida Grande'; color: #555555}
+    span.s6 {font: 18.0px 'Lucida Grande'; color: #333333}
+    span.s7 {font: 13.0px Courier}
     ol.ol1 {list-style-type: decimal}
     ul.ul1 {list-style-type: disc}
     ul.ul2 {list-style-type: circle}
@@ -37,18 +36,18 @@
     <li class="li2"><a href="http://guides.rubyonrails.org/"><span class="s1">Rails Guides</span></a></li>
   </ul>
 </ul>
-<h1 style="margin: 0.0px 0.0px 0.0px 0.0px; font: 28.0px 'Lucida Grande'; background-color: #ffffff"><b>Welcome aboard</b></h1>
+<h1 style="margin: 0.0px 0.0px 0.0px 0.0px; font: 28.0px 'Lucida Grande'; background-color: #ffffff"><b>Welcome aboard*</b></h1>
 <h2 style="margin: 0.0px 0.0px 0.0px 0.0px; font: 16.0px 'Lucida Grande'; color: #888888; background-color: #ffffff">You’re riding Ruby on Rails! (static-pages-git-test)</h2>
-<h3 style="margin: 0.0px 0.0px 10.0px 0.0px; font: 14.0px 'Lucida Grande'; color: #0033cc; background-color: #ffffff"><span class="s1"><a href="file:///Users/peterjones/rails_projects/sample_app/public/rails/info/properties"><b>About your application’s environment</b><span class="s2"><b></b></span></a></span></h3>
+<h3 style="margin: 0.0px 0.0px 10.0px 0.0px; font: 14.0px 'Lucida Grande'; color: #0000ee; background-color: #ffffff"><a href="file:///Users/peterjones/rails_projects/sample_app/public/rails/info/properties"><b>About your application’s environment</b></a></h3>
 <h1 style="margin: 0.0px 0.0px 0.0px 0.0px; font: 20.0px 'Lucida Grande'; background-color: #ffffff"><b>Getting started</b></h1>
 <h2 style="margin: 0.0px 0.0px 25.0px 0.0px; font: 14.0px 'Lucida Grande'; color: #333333; background-color: #ffffff">Here’s how to get rolling:</h2>
 <ol class="ol1">
-  <li class="li8"><span class="s3">Use </span><span class="s4">rails generate</span><span class="s3"> to create your models and controllers<br>
-</span><span class="s5">To see all available options, run it without parameters.</span></li>
+  <li class="li8"><span class="s2">Use </span><span class="s3">rails generate</span><span class="s2"> to create your models and controllers<br>
+</span><span class="s4">To see all available options, run it without parameters.</span></li>
   <li class="li9">Set up a default route and remove or rename this file<br>
-<span class="s6">Routes are set up in config/routes.rb.</span></li>
-  <li class="li10"><span class="s7">Create your database<br>
-</span>Run <span class="s8">rake db:migrate</span> to create your database. If you're not using SQLite (the default), edit <span class="s8">config/database.yml</span> with your username and password.</li>
+<span class="s5">Routes are set up in config/routes.rb.</span></li>
+  <li class="li10"><span class="s6">Create your database<br>
+</span>Run <span class="s7">rake db:migrate</span> to create your database. If you're not using SQLite (the default), edit <span class="s7">config/database.yml</span> with your username and password.</li>
 </ol>
 <p class="p11"> </p>
 </body>
