added ** to welcome page.

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     <li class="li2"><a href="http://guides.rubyonrails.org/"><span class="s1">Rails Guides</span></a></li>
   </ul>
 </ul>
-<h1 style="margin: 0.0px 0.0px 0.0px 0.0px; font: 28.0px 'Lucida Grande'; background-color: #ffffff"><b>Welcome aboard*</b></h1>
+<h1 style="margin: 0.0px 0.0px 0.0px 0.0px; font: 28.0px 'Lucida Grande'; background-color: #ffffff"><b>Welcome aboard**</b></h1>
 <h2 style="margin: 0.0px 0.0px 0.0px 0.0px; font: 16.0px 'Lucida Grande'; color: #888888; background-color: #ffffff">You’re riding Ruby on Rails! (static-pages-git-test)</h2>
 <h3 style="margin: 0.0px 0.0px 10.0px 0.0px; font: 14.0px 'Lucida Grande'; color: #0000ee; background-color: #ffffff"><a href="file:///Users/peterjones/rails_projects/sample_app/public/rails/info/properties"><b>About your application’s environment</b></a></h3>
 <h1 style="margin: 0.0px 0.0px 0.0px 0.0px; font: 20.0px 'Lucida Grande'; background-color: #ffffff"><b>Getting started</b></h1>
